--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "chat-app",
+  "name": "min2-chat",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
-  "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.5",
-    "cors": "^2.8.5",
-    "uuid": "^9.0.0",
-    "dotenv": "^16.3.1"
-  },
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.7.5"
   }
 }
